Fixed header spacing, changed h2 to h3 in sheets

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,12 +13,14 @@ Gray: grey
 
 html {
   font-size: 10px;
+  height: 100%;
 }
 
 body {
   font-family: 'Oswald', Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 header {
@@ -27,9 +29,14 @@ header {
   background-color: grey;
   border-bottom: 2px solid #514845;
   align-items: center;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
   width: 100%;
+}
+
+.imakappa-header-logo {
+  max-height: 56px;
 }
 
 main {
@@ -51,6 +58,12 @@ h2 {
   padding: 0;
 }
 
+h3 {
+  font-size: 2rem;
+  margin: 1em;
+  padding: 0;
+}
+
 p {
   font-size:  1.5rem;
   line-height: 1.6;
@@ -64,7 +77,6 @@ ul {
 }
 
 footer {
-  position: fixed;
   bottom: 0;
   margin: 0;
   width: 100%;
